--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-    "@stripe/stripe-js": "https://aistudiocdn.com/@stripe/stripe-js@^8.5.3"
+    "@stripe/stripe-js": "https://aistudiocdn.com/@stripe/stripe-js@^8.5.3",
+    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1/dist/jspdf.es.min.js"
   }
 }
 </script>
