--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
     "@stripe/stripe-js": "https://aistudiocdn.com/@stripe/stripe-js@^8.5.3",
-    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1/dist/jspdf.es.min.js"
+    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1/dist/jspdf.es.min.js",
+    "@sendgrid/mail": "https://esm.sh/@sendgrid/mail@^8.1.6"
   }
 }
 </script>
