--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     "@stripe/stripe-js": "https://aistudiocdn.com/@stripe/stripe-js@^8.5.3",
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1/dist/jspdf.es.min.js",
     "@sendgrid/mail": "https://esm.sh/@sendgrid/mail@^8.1.6",
-    "stripe": "https://esm.sh/stripe@^20.0.0"
+    "stripe": "https://esm.sh/stripe@^20.0.0",
+    "firebase-admin": "https://esm.sh/firebase-admin@^13.6.0"
   }
 }
 </script>
